--- a/src/app.html
+++ b/src/app.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Book Tracker</title>
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>Book Tracker</title>
 	%sveltekit.head%
+	<link rel="stylesheet" href="/src/app.scss" />
 </head>
-<body>
-%sveltekit.body%
+<body data-sveltekit-preload-data="hover">
+<div style="display: contents">%sveltekit.body%</div>
 </body>
 </html>
